--- a/package.json
+++ b/package.json
@@ -1,23 +1,26 @@
 {
-  "name": "wordpress-plugin-starterkit",
-  "version": "1.0.0",
-  "description": "",
-  "scripts": {
-    "watch": "wp-scripts start",
-    "build": "wp-scripts build",
-    "pack": "./bin/pack.sh"
-  },
-  "dependencies": {
-    "@wordpress/scripts": "28.1.0"
-  },
-  "author": {
-    "name": "Edward Bock",
-    "email": "hi@edwardbock.de",
-    "url": "https://www.edwardbock.de/starterkits/wordpress-plugin"
-  },
-  "license": "GPL-3.0-or-later",
-  "engines": {
-    "node": ">=20",
-    "npm": ">=9"
-  }
+	"name": "wordpress-plugin-starterkit",
+	"version": "1.0.0",
+	"description": "",
+	"scripts": {
+		"watch": "wp-scripts start",
+		"build": "wp-scripts build",
+		"pack": "./bin/pack.sh"
+	},
+	"dependencies": {
+		"@wordpress/block-editor": "^13.2.0",
+		"@wordpress/blocks": "^13.2.0",
+		"@wordpress/i18n": "^5.2.0",
+		"@wordpress/scripts": "28.1.0"
+	},
+	"author": {
+		"name": "Edward Bock",
+		"email": "hi@edwardbock.de",
+		"url": "https://www.edwardbock.de/starterkits/wordpress-plugin"
+	},
+	"license": "GPL-3.0-or-later",
+	"engines": {
+		"node": ">=20",
+		"pnpm": ">=9"
+	}
 }
