--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "1.0.0",
 	"description": "",
 	"scripts": {
-		"watch": "wp-scripts start",
+		"dev": "wp-scripts start",
 		"build": "wp-scripts build",
 		"pack": "./bin/pack.sh"
 	},
