--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       WORDPRESS_DB_PASSWORD: examplepass
       WORDPRESS_DB_NAME: exampledb
     volumes:
-      - ./:/var/www/html/wp-content/plugins/wordpress-plugin-starterkit
+      - ./plugin:/var/www/html/wp-content/plugins/wordpress-plugin-starterkit
       - ./wp.ini:/usr/local/etc/php/conf.d/wp.ini
     networks:
       - wp
@@ -36,5 +36,4 @@ networks:
   wp:
 
 volumes:
-  wordpress:
   db:
