--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,8 @@ services:
       WORDPRESS_DB_PASSWORD: examplepass
       WORDPRESS_DB_NAME: exampledb
     volumes:
-      - ./plugin:/var/www/html/wp-content/plugins/wordpress-plugin-starterkit
+      - ./:/var/www/html/wp-content/mu-plugins/
+      - content:/var/www/html/wp-content/
       - ./wp.ini:/usr/local/etc/php/conf.d/wp.ini
     networks:
       - wp
@@ -37,3 +38,4 @@ networks:
 
 volumes:
   db:
+  content:
